--- a/Plantilla OpenGL/Plantilla OpenGL.vcxproj
+++ b/Plantilla OpenGL/Plantilla OpenGL.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{B8968AD4-64D6-4AB9-B2DA-6CE61814EFE9}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PlantillaOpenGL</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -156,6 +156,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vertice.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Plantilla OpenGL.cpp" />
